c3prj1_deck/grade.txt
Grading at Sat Mar 27 11:40:10 UTC 2021
Compiling deck.c
Compiling cards.c
cards.c: In function ‘assert_card_valid’:
cards.c:8:10: error: too many arguments for format [-Werror=format-extra-args]
   printf("c = ", c.value);
          ^
cc1: all warnings being treated as errors
Could not compile your cards.c!

Overall Grade: FAILED
